--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
             <!--<url>http://dev.soufun.com:6533/nexus/content/repositories/public</url>-->
         <!--</repository>-->
     <!--</repositories>-->
+
+    <properties>
+        <java.version>1.8</java.version>
+        <spring-cloud.version>Finchley.SR2</spring-cloud.version>
+    </properties>
     <repositories>
         <repository>
             <id>nexus</id>
@@ -45,6 +50,10 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -119,6 +128,7 @@
             <scope>provided</scope>
         </dependency>
 
+
         <!-- tomcat支持 -->
         <!--		<dependency>
                     <groupId>org.apache.tomcat.embed</groupId>
@@ -182,6 +192,18 @@
 
         </dependency>
     </dependencies>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>2.0.7</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <build>
         <plugins>
