--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -131,6 +131,10 @@ eureka:
   client:
     service-url:
       defaultZone: http://127.0.0.1:9999/eureka/
+server:
+  port: 8080
+  tomcat:
+    uri-encoding: UTF-8
 ---
 
 #pro环境配置
